--- a/index.html
+++ b/index.html
@@ -1198,21 +1198,45 @@
 
       // Album art fallback helper:
       function setAlbumArt(src) {
-        albumArt.dataset.failed = "false";
-        if (!src) {
-          albumArt.src = "";
-          albumArt.style.background = "linear-gradient(135deg, #8B1E2D, #C94A5A)";
-          albumArt.alt = "Album art unavailable";
-          return;
-        }
-        albumArt.src = src;
-        albumArt.alt = "Album art";
-        albumArt.onload = () => {
-          albumArt.style.display = "block";
-          albumArt.style.background = "";
-          delete albumArt.dataset.failed;
-        };
+  // reset fail flag
+  albumArt.dataset.failed = "false";
 
+  // no source provided -> show gradient fallback
+  if (!src) {
+    albumArt.src = "";
+    albumArt.style.background = "linear-gradient(135deg, #8B1E2D, #C94A5A)";
+    albumArt.alt = "Album art unavailable";
+    return;
+  }
+
+  // try the requested source first
+  albumArt.src = src;
+  albumArt.alt = "Album art";
+
+  // on successful load, clear any background fallback
+  albumArt.onload = () => {
+    albumArt.style.display = "block";
+    albumArt.style.background = "";
+    delete albumArt.dataset.failed;
+  };
+
+  // if it fails, try 2.JPG as the first fallback, otherwise final gradient
+  albumArt.onerror = () => {
+    if (src !== "2.JPG") {
+      // first fallback attempt
+      albumArt.src = "2.JPG";
+      albumArt.alt = "Fallback album art";
+      return;
+    }
+
+    // final fallback: gradient background
+    albumArt.src = "";
+    albumArt.alt = "Album art unavailable";
+    albumArt.style.background = "linear-gradient(135deg, #8B1E2D, #C94A5A)";
+    albumArt.style.display = "block";
+    albumArt.dataset.failed = "true";
+  };
+}
       function loadSong(index) {
         currentIndex = index;
         const song = playlist[currentIndex];
