--- a/index.html
+++ b/index.html
@@ -945,7 +945,7 @@
           title: "Until I Found You",
           artist: "Stephen Sanchez",
           src: "Until I Found You.mp3",
-          cover: "2.jpg",
+          cover: "IMG-20251129-WA0029.jpg",
           synced: true,
           lyrics: [
             { time: 10.6, text: "Georgia, Wrap me up in all your..." },
