--- a/index.html
+++ b/index.html
@@ -860,7 +860,7 @@
         {
           title: "Love story",
           artist: "Taylor Swift",
-          src: "Love-Story.mp3",
+          src: "love-story.mp3",
           cover: "5.jpg",
           synced: true,
           lyrics: [
